Adjust about-me, add links, fix some spacing.

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
   outline: solid 1px red;
 } */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
 }
@@ -31,15 +35,15 @@ body {
 }
 
 .content {
-  padding-top: 15rem;
-  padding-bottom: 10rem;
-  /* height: 100%; */
+  padding-top: 12rem;
+  padding-bottom: 15rem;
   scroll-snap-align: start inherit;
 }
 
 .content-container {
   scroll-snap-type: x mandatory;
   margin-right: 15%;
+
 }
 
 .icon-container {
@@ -74,4 +78,14 @@ body {
 
 .screenshot {
   height: 12rem;
+}
+
+.content a:link, a:visited{
+  transition: background-color 1s;
+  /* background-color: #E9D758; */
+  color: black;
+}
+
+.content a:hover {
+  background-color: #EFE281;
 }
